--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ label {
   top: 1px;
 }
 
-svg {
+.right svg {
   width: 22px;
   height: 22px;
   stroke: #1aff7c;
@@ -111,6 +111,9 @@ svg {
 .tron-logo {
   width: 18px;
   height: 18px;
+}
+
+.tron-logo * {
   stroke: none !important;
 }
 
