--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ label{
   height:54px;
   border-radius:999px;
   border:none;
-  background:##1aff7c;
+  background:#1aff7c;
   color:#0b1f14;
   font-size:18px;
   font-weight:600
